versioned_docs/version-2.16/reference/targets/system_binary.mdx
---
title: system_binary
# The old-style `code...code` anchors are heading level 6, and shouldn't be visible in ToC
toc_max_heading_level: 5
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

A system binary that can be run with `pants run` or consumed by `adhoc_tool`.

Pants will search for binaries with name `binary_name` in the search paths provided, as well as default search paths. If `fingerprint` is specified, each binary that is located will be executed with the arguments from `fingerprint_args`. Any binaries whose output does not match the pattern will be excluded.

The first non-excluded binary will be the one that is resolved.

Backend: <span className="color--primary">`pants.backend.experimental.adhoc`</span>

---

<span className={styles.options}>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetagscode}
</div>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `scie-pants-linux-x86_64 --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedescriptioncode}
</div>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `scie-pants-linux-x86_64 list --documented ::` to see all targets with descriptions.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codebinary_namecode}
</div>

## `binary_name`

<Field
    type_repr={`str`}
    default_repr={`None`}
>

The name of the binary to find.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeextra_search_pathscode}
</div>

## `extra_search_paths`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`()`}
>

Extra search paths to look for the binary. These take priority over Pants&#x27; default search paths.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codefingerprintcode}
</div>

## `fingerprint`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A regular expression which will be used to match the fingerprint outputs from candidate binaries found during the search process.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codefingerprint_argscode}
</div>

## `fingerprint_args`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`()`}
>

Specifies arguments that will be used to run the binary during the search process.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codefingerprint_dependenciescode}
</div>

## `fingerprint_dependencies`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Specifies any runnable dependencies that need to be available on the `PATH` when the binary is run, so that the search process may complete successfully. The name of the target must be the name of the runnable dependency that is called by this binary.

</Field>

</span>
