versioned_docs/version-2.31/reference/targets/system_binary.mdx
---
title: system_binary
description: |
  A system binary that can be run with `pants run` or consumed by `adhoc_tool`.
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

A system binary that can be run with `pants run` or consumed by `adhoc_tool`.

Pants will search for binaries with name `binary_name` in the search paths provided, as well as default search paths. If `fingerprint` is specified, each binary that is located will be executed with the arguments from `fingerprint_args`. Any binaries whose output does not match the pattern will be excluded.

The first non-excluded binary will be the one that is resolved.

Backend: <span className="color--primary">`pants.backend.experimental.adhoc`</span>

---

<span className={styles.options}>

## `binary_name`

<Field
    type_repr={`str`}
>

The name of the binary to find.

</Field>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `pants list --documented ::` to see all targets with descriptions.

</Field>

## `extra_search_paths`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`()`}
>

Extra search paths to look for the binary. These take priority over Pants&#x27; default search paths.

</Field>

## `fingerprint`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A regular expression which will be used to match the fingerprint outputs from candidate binaries found during the search process.

</Field>

## `fingerprint_args`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`()`}
>

Specifies arguments that will be used to run the binary during the search process.

</Field>

## `fingerprint_dependencies`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Specifies any runnable dependencies that need to be available on the `PATH` when the binary is run, so that the search process may complete successfully. The name of the target must be the name of the runnable dependency that is called by this binary.

</Field>

## `log_fingerprinting_errors`

<Field
    type_repr={`bool`}
    default_repr={`True`}
>

If True, then any errors encountered while fingerprinting candidate binaries will be logged as a warning.

</Field>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `pants --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

</span>
